--- a/html/index.html
+++ b/html/index.html
@@ -87,12 +87,11 @@
   </div>
 
   <!-- Chart.js (for graph placeholders) -->
+  <script src="env.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <script src="https://cdn.plot.ly/plotly-2.32.0.min.js"></script>
-  
-<!--   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script> -->
   <script src="scripts.js"></script>
-  <script src="https://cdn.plot.ly/plotly-2.32.0.min.js"></script>
+
 
 </body>
 </html>
