--- a/html/index.html
+++ b/html/index.html
@@ -8,12 +8,14 @@
 </head>
 <body>
   <div class="dashboard">
-    <header class="dashboard-header">
-      <div class="location">
-        <span>GHANA</span> • <span>EUR</span>
-      </div>
-      <h1>Fraud Detection Dashboard</h1>
-    </header>
+    <!-- Navigation Bar -->
+  <nav class="navbar">
+    <ul class="nav-links">
+      <li><a href="user_account.html">Admin</a></li>
+      <li><a href="account_reg.html">Account Registration</a></li>
+      <li><a href="index.html">Home</a></li>
+    </ul>
+  </nav>
 
     <section class="top-section">
       <div class="summary-card blue">
