--- a/html/account_reg.html
+++ b/html/account_reg.html
@@ -202,7 +202,7 @@
     };
 
     try {
-      const response = await fetch("http://localhost:8000/new_registration/submit", {
+      const response = await fetch("https://fraud-detection-api-xioa.onrender.com/new_registration/submit", {
         method: "POST",
         headers: {
           "Content-Type": "application/json"
