--- a/html/user_account.html
+++ b/html/user_account.html
@@ -11,7 +11,7 @@
   <nav class="navbar">
     <ul class="nav-links">
       <li><a href="index.html">Dashboard</a></li>
-      <li><a href="account_reg.html">Account Registration</a></li>
+      <li><a href="account_reg.html">Admin</a></li>
       <li><a href="#">Feedback</a></li>
     </ul>
   </nav>
@@ -93,7 +93,7 @@
     };
 
     try {
-      const response = await fetch("http://localhost:8000/create_admin/submit", {
+      const response = await fetch("https://fraud-detection-api-xioa.onrender.com/create_admin/submit", {
         method: "POST",
         headers: {
           "Content-Type": "application/json"
