--- a/html/index.html
+++ b/html/index.html
@@ -13,7 +13,7 @@
     <ul class="nav-links">
       <li><a href="user_account.html">Admin</a></li>
       <li><a href="account_reg.html">Account Registration</a></li>
-      <li><a href="index.html">Home</a></li>
+      <li><a href="https://my-profile-page-ox8w.onrender.com/">Home</a></li>
     </ul>
   </nav>
 
