--- a/html/account_reg.html
+++ b/html/account_reg.html
@@ -13,8 +13,8 @@
    <!-- Navigation Bar -->
   <nav class="navbar">
     <ul class="nav-links">
+      <li><a href="https://my-profile-page-ox8w.onrender.com/">Home</a></li>
       <li><a href="index.html">Dashboard</a></li>
-      <li><a href="account_reg.html">Account Registration</a></li>
       <li><a href="#">Feedback</a></li>
     </ul>
   </nav>
