--- a/html/user_account.html
+++ b/html/user_account.html
@@ -10,8 +10,8 @@
   <!-- Navigation Bar -->
   <nav class="navbar">
     <ul class="nav-links">
+      <li><a href="https://my-profile-page-ox8w.onrender.com/">Home</a></li>
       <li><a href="index.html">Dashboard</a></li>
-      <li><a href="account_reg.html">Admin</a></li>
       <li><a href="#">Feedback</a></li>
     </ul>
   </nav>
